# be/internal/dto/final_donation_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type UpdateNotesDTO struct {
+	DonationID uint   `json:"donation_id" validate:"required"`
+	Notes      string `json:"notes" validate:"required"`
+}
